--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+#pycharm
+*.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
 # C extensions
 *.so
 
